StaffTable: fix github link alert bar alignment, add text re: access, remove chevron on docs link

--- a/apps/prairielearn/public/stylesheets/local.css
+++ b/apps/prairielearn/public/stylesheets/local.css
@@ -480,3 +480,7 @@ input.form-check-input:disabled {
 .staff-table td {
   align-items: center;
 }
+
+.text-wrap-balance {
+  text-wrap: balance;
+}
